--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,8 +11,11 @@ services:
       - "8000:8000"
     environment:
       - GEMINI_API_KEY=${GEMINI_API_KEY}
-      - GEMINI_MODEL=${GEMINI_MODEL:-models/gemini-2.0-flash}
+      - GEMINI_MODEL=${GEMINI_MODEL:-models/gemini-2.0-flash-exp}
       - TZ=UTC
+      - HOST=0.0.0.0
+      - PORT=8000
+      - LOG_LEVEL=${LOG_LEVEL:-INFO}
     volumes:
       - ./logs:/app/logs
     healthcheck:
@@ -31,7 +34,8 @@ services:
     ports:
       - "3000:80"
     environment:
-      - REACT_APP_WS_URL=ws://localhost:8000
+      - REACT_APP_WS_URL=${REACT_APP_WS_URL:-ws://localhost:8000}
+      - NODE_ENV=production
     depends_on:
       - gemini-assistant
 
