--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,8 @@ python-dotenv>=0.19.0
 loguru>=0.6.0
 aiohttp>=3.8.1
 pydantic>=1.10.8
+httpx>=0.24.0
+requests>=2.31.0
 
 # For development (uncomment if needed)
 # pytest>=7.0.0
